testing/macro-tests/tests/ui/pk_fields_too_many.stderr
error: pk(fields = [...]) supports at most 4 fields
  --> tests/ui/pk_fields_too_many.rs:21:38
   |
21 |     pk(fields = ["a", "b", "c", "d", "e"]),
   |                                      ^^^
